--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,232 @@
+.inline-svg-icon {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  fill: #fff; }
+
+.figure {
+  display: inline; }
+
+.badge-secondary {
+  line-height: 1.428571429;
+  font-weight: 700;
+  font-size: 0.7rem;
+  margin-right: 1rem;
+  text-transform: capitalize;
+  vertical-align: top; }
+
+.timeline-centered {
+  position: relative;
+  margin-bottom: 30px; }
+
+.timeline-centered:before, .timeline-centered:after {
+  content: " ";
+  display: table; }
+
+.timeline-centered:after {
+  clear: both; }
+
+.timeline-centered:before, .timeline-centered:after {
+  content: " ";
+  display: table; }
+
+.timeline-centered:after {
+  clear: both; }
+
+.timeline-centered:before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 4px;
+  background: #f5f5f6;
+  /*left: 50%;*/
+  top: 20px;
+  bottom: 20px;
+  margin-left: 30px; }
+
+.timeline-centered .timeline-entry {
+  position: relative;
+  /*width: 50%;
+      float: right;*/
+  margin-top: 5px;
+  margin-left: 30px;
+  margin-bottom: 10px;
+  clear: both; }
+
+.timeline-centered .timeline-entry:before, .timeline-centered .timeline-entry:after {
+  content: " ";
+  display: table; }
+
+.timeline-centered .timeline-entry:after {
+  clear: both; }
+
+.timeline-centered .timeline-entry:before, .timeline-centered .timeline-entry:after {
+  content: " ";
+  display: table; }
+
+.timeline-centered .timeline-entry:after {
+  clear: both; }
+
+.timeline-centered .timeline-entry.begin {
+  margin-bottom: 0; }
+
+.timeline-centered .timeline-entry.left-aligned {
+  float: left; }
+
+.timeline-centered .timeline-entry.left-aligned .timeline-entry-inner {
+  margin-left: 0;
+  margin-right: -18px; }
+
+.timeline-centered .timeline-entry.left-aligned .timeline-entry-inner .timeline-time {
+  left: auto;
+  right: -100px;
+  text-align: left; }
+
+.timeline-centered .timeline-entry.left-aligned .timeline-entry-inner .timeline-icon {
+  float: right; }
+
+.timeline-centered .timeline-entry.left-aligned .timeline-entry-inner .timeline-label {
+  margin-left: 0;
+  margin-right: 70px; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner {
+  position: relative;
+  margin-left: -20px; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner:before, .timeline-centered .timeline-entry .timeline-entry-inner:after {
+  content: " ";
+  display: table; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner:after {
+  clear: both; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner:before, .timeline-centered .timeline-entry .timeline-entry-inner:after {
+  content: " ";
+  display: table; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner:after {
+  clear: both; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-time {
+  position: absolute;
+  left: -100px;
+  text-align: right;
+  padding: 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon {
+  background: #fff;
+  color: #737881;
+  display: block;
+  width: 60px;
+  height: 60px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+  text-align: center;
+  -moz-box-shadow: 0 0 0 5px #f5f5f6;
+  -webkit-box-shadow: 0 0 0 5px #f5f5f6;
+  box-shadow: 0 0 0 5px #f5f5f6;
+  line-height: 60px;
+  font-size: 1.5rem;
+  float: left; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.bg-nebo {
+  background-color: #5195ae;
+  color: #fff; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.bg-primary {
+  background-color: #303641;
+  color: #fff; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.bg-secondary {
+  background-color: #ee4749;
+  color: #fff; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.bg-success {
+  background-color: #00a651;
+  color: #fff; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.bg-info {
+  background-color: #21a9e1;
+  color: #fff; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.bg-warning {
+  background-color: #fad839;
+  color: #fff; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.bg-danger {
+  background-color: #cc2424;
+  color: #fff; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label {
+  position: relative;
+  background: #f5f5f6;
+  padding: 1em;
+  margin-left: 80px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label:after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 9px 9px 9px 0;
+  border-color: transparent #f5f5f6 transparent transparent;
+  left: 0;
+  top: 10px;
+  margin-left: -9px; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h3, .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label p {
+  color: #737881;
+  font-size: 0.9rem;
+  margin: 0;
+  line-height: 1.428571429; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label p + p {
+  margin-top: 15px; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h3 {
+  font-size: 1.25rem;
+  margin-bottom: 0.3rem; }
+
+.timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h3 a {
+  color: #303641; }
+
+.table-dark {
+  color: #fff;
+  background-color: #606eba; }
+
+.table-notes {
+  font-size: 0.9rem; }
+
+.bg-nebo-orange {
+  background-color: #ffbb71; }
+
+.bg-nebo-yellow {
+  background-color: #ffd671; }
+
 .header-title-bg {
   background-image: url("/img/header-title-bg.png");
   background-repeat: no-repeat;
   height: 100%;
   background-position: 50%;
   padding: 5rem; }
+
+.date {
+  font-size: 0.7rem; }
 
 body {
   position: relative;
@@ -23,8 +246,7 @@ h5,
 h6 {
   font-weight: 700;
   margin: 0 0 35px;
-  letter-spacing: 1px;
-  text-transform: uppercase; }
+  letter-spacing: 1px; }
 
 p {
   font-size: 16px;
@@ -50,13 +272,13 @@ a:focus, a:hover {
 #mainNav {
   margin-bottom: 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  background-color: black; }
+  background-color: #5195ae; }
 
 #mainNav .navbar-toggler {
   font-size: 14px;
   padding: 11px;
   color: white;
-  border: 1px solid white; }
+  border: none; }
 
 #mainNav .navbar-brand {
   font-weight: 700; }
@@ -178,8 +400,8 @@ a:focus, a:hover {
 
 @media (min-width: 992px) {
   .content-section {
-    padding-top: 200px;
-    padding-bottom: 200px; } }
+    padding-top: 150px;
+    padding-bottom: 150px; } }
 
 .btn {
   font-weight: 400;
